--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pl_PL">
     <head>
         <meta charset="utf-8">
+
+        <script type="text/javascript" src="lib/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         
