--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        
+        <div id="arena"></div>
     </body>
 </html>
